present screen working

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,3 +14,7 @@ h1 { font-size: 1.25rem; }
 h2 { font-size: 1.125rem; }
 h3 { font-size: 1rem; }
 
+.MuiSvgIcon-root {
+	font-size: 24px !important;
+}
+
