--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,3 +18,8 @@ h3 { font-size: 1rem; }
 	font-size: 24px !important;
 }
 
+.MuiButton-label {
+	text-transform: none !important;
+	font-family: "Inter", sans-serif;
+}
+
