--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,6 +14,10 @@ h1 { font-size: 1.25rem; }
 h2 { font-size: 1.125rem; }
 h3 { font-size: 1rem; }
 
+h1, h2, h3 {
+	margin: 0;
+}
+
 .MuiSvgIcon-root {
 	font-size: 24px !important;
 }
