timeline current slide styles

--- a/styles/editor.css
+++ b/styles/editor.css
@@ -192,6 +192,14 @@
 	height: 24px;
 }
 
+.appGrid .timeline .keyframes .frame .keyframeWrapper.current { color: var(--piss); }
+.appGrid .timeline .keyframes .frame .keyframeWrapper.current .loop .connector { background-color: var(--piss); }
+.appGrid .timeline .keyframes .frame .keyframeWrapper ,
+.appGrid .timeline .keyframes .frame .keyframeWrapper .loop .connector {
+	transition-property: color, background-color;
+	transition-duration: .2s;
+}
+
 .appGrid .timeline .keyframes .frame:nth-child(30n) .timecode {
 	color: var(--c700);
 	font-weight: 500;
