--- a/styles/editor.css
+++ b/styles/editor.css
@@ -186,7 +186,6 @@
 .appGrid .timeline .keyframes .frame .keyframeWrapper {
 	line-height: 0;
 	top: 44px;
-	z-index: 999;
 	color: var(--gruble);
 	width: 24px;
 	height: 24px;
@@ -218,7 +217,7 @@
 	width: 2px;
 	overflow: visible;
 	filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.3));
-	z-index: 999999999;
+	z-index: 1;
 	left: calc((var(--zoom) * (var(--frame) + 0.5)) * 1px - 1px)
 }
 
@@ -229,19 +228,20 @@
 	opacity: .0;
 }
 
-.timeline .scrubber .head {
-	fill: var(--blue);
-	z-index: 1;
-	cursor: grab;
-}
-.timeline .scrubber .head:active {
-	cursor: grabbing;
-}
 
+.timeline .scrubberJumpArea { cursor: grab; }
+.timeline .scrubberJumpArea:active { cursor: grabbing; }
+
+.timeline .scrubber .head { fill: var(--blue); }
 .timeline .scrubber .needle { background-color: var(--blue); }
 
 .timeline .labels .label {
 	transform: translate(-50%, -100%);
 	color: var(--c700);
+}
+
+.timeline .scrubberJumpArea {
+	height: 28px;
+	z-index: 9;
 }
 
