--- a/styles/editor.css
+++ b/styles/editor.css
@@ -50,7 +50,7 @@
 	color: var(--gruble);
 }
 
-.appGrid .tools .MuiButtonGroup-root,
+.appGrid .tools .MuiToggleButtonGroup-root,
 .appGrid .tools .zoom {
 	margin-top: 8px;
 }
@@ -68,7 +68,7 @@
 	color: var(--gruble);
 }
 
-.appGrid .tools .MuiButtonGroup-root .MuiButton-root {
+.appGrid .tools .MuiToggleButtonGroup-root .MuiToggleButton-root {
 	border-width: 2px;
 	padding: 8px;
 	color: var(--c800);
@@ -76,15 +76,22 @@
 	margin-right: -1px;
 }
 
-.appGrid .tools .MuiButtonGroup-root .MuiButton-root:first-child {
+.appGrid .tools .MuiToggleButtonGroup-root .MuiToggleButton-root.Mui-selected {
+	color: var(--gruble);
+	background-color: rgba(93, 233, 174, 0.12);
+	border-top-color: #334A5A;
+	border-bottom-color: #334A5A;
+}
+
+.appGrid .tools .MuiToggleButtonGroup-root .MuiToggleButton-root:first-child {
 	border-radius: 6px 0 0 6px;
 }
 
-.appGrid .tools .MuiButtonGroup-root .MuiButton-root:last-child {
+.appGrid .tools .MuiToggleButtonGroup-root .MuiToggleButton-root:last-child {
 	border-radius: 0 6px 6px 0;
 }
 
-.appGrid .tools .MuiButtonGroup-root .MuiButton-root .loopStartEnd {
+.appGrid .tools .MuiToggleButtonGroup-root .MuiToggleButton-root .loopStartEnd {
 	display: inline-block;
 	white-space: nowrap;
 	line-height: 0;
@@ -93,8 +100,8 @@
 	width: 36px;
 }
 
-.appGrid .tools .MuiButtonGroup-root .MuiButton-root .loopStartEnd .start { left: -3px; }
-.appGrid .tools .MuiButtonGroup-root .MuiButton-root .loopStartEnd .end { right: -3px; }
+.appGrid .tools .MuiToggleButtonGroup-root .MuiToggleButton-root .loopStartEnd .start { left: -3px; }
+.appGrid .tools .MuiToggleButtonGroup-root .MuiToggleButton-root .loopStartEnd .end { right: -3px; }
 
 .appGrid .timeline {
 	grid-column: 2;
