ghost for adding keyframes :tada:

--- a/styles/editor.css
+++ b/styles/editor.css
@@ -169,6 +169,19 @@
 	width: calc(var(--zoom) * var(--total-frames) * 1px);
 }
 
+.appGrid .timeline .ghostArea {
+	pointer-events: none;
+	line-height: 0;
+	transition-property: opacity;
+	transition-duration: 150ms;
+	opacity: 0;
+	color: var(--gruble);
+}
+
+.appGrid .timeline:hover .ghostArea.active {
+	opacity: 1;
+}
+
 .appGrid .timeline .keyframes .frame {
 	background-color: transparent;
 	height: 100%;
