--- a/styles/keyframes.css
+++ b/styles/keyframes.css
@@ -39,7 +39,10 @@
 	z-index: 1;
 }
 
-.keyframe > * {
+.keyframe {
+	line-height: 0;
 	fill: currentColor;
 }
 
+.keyframe.ghost .background { opacity: .2; }
+.keyframe.ghost .outline { opacity: .7; }
