--- a/styles/editor.css
+++ b/styles/editor.css
@@ -42,11 +42,31 @@
 }
 
 .settings .inner .section > * { margin-bottom: 8px; }
-.settings .inner .scroll { top: 32px; }
+.settings .inner .scroll {
+	top: 32px;
+	overflow-y: scroll;
+	overflow-x: hidden;
+	border-radius: 4px;
+	margin-right: -8px;
+}
 .settings .inner button {
 	width: 100%;
 	background-color: var(--piss);
 	color: var(--bg);
+}
+.settings .inner .section .settings {
+	display: grid;
+	grid-auto-flow: column;
+}
+
+.settings ::-webkit-scrollbar-track,
+.settings ::-webkit-scrollbar-track-piece,
+.settings ::-webkit-scrollbar {
+	background-color: var(--c400);
+}
+
+.settings ::-webkit-scrollbar-thumb {
+	background-color: var(--c700);
 }
 
 .appGrid .viewer {
