--- a/styles/keybindselector.css
+++ b/styles/keybindselector.css
@@ -5,6 +5,10 @@
 
 .keybind-selector > * { cursor: pointer !important; } 
 
+.keybind-selector .MuiInputBase-root {
+	background-color: var(--c600) !important;
+}
+
 .keybind-selector-inner .keybind {
 	padding: 2px 4px 1px;
 	margin-right: 3px;
