selection working again with hookstate :tada:

--- a/styles/editor.css
+++ b/styles/editor.css
@@ -299,6 +299,11 @@
 	cursor: grabbing;
 }
 
+#selection {
+	left: calc(var(--zoom) * (var(--starting-frame) + var(--center)) * 1px - 6px + var(--start-offset) * 1px);
+	top: calc((var(--y) - 6) * 1px);
+}
+
 .appGrid .timeline .ghostArea {
 	pointer-events: none;
 	line-height: 0;
