project settings working

--- a/styles/editor.css
+++ b/styles/editor.css
@@ -42,7 +42,11 @@
 }
 
 .MuiSwitch-root { margin: -6px 0px; }
-.settings .inner .section > * { margin-bottom: 8px; }
+
+.settings .inner .section > *,
+.form-spacing > *
+{ margin-bottom: 8px !important; }
+
 .settings .inner .scroll {
 	top: 32px;
 	overflow-y: scroll;
@@ -59,8 +63,8 @@
 	font-weight: 500;
 }
 
-.settings .inner button,
-.settings .inner .MuiFormControl-root
+.fullwidth-inputs button,
+.fullwidth-inputs .MuiFormControl-root
 { width: 100%; }
 
 :root { --selection-hover-color: rgba(93, 233, 174, 0.04); }
